css/style.css
/* ... */
.abstract{
	grid-row: 1/ span 1;
	grid-column: 1/ span 1;
	color: #0B486B;
	padding-bottom: 20px;
	text-align: center;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 90%;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
}
.video{
	grid-row: 2/ span 1;
	grid-column: 1/ span 1;
	text-align: center;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 90%;
  border-radius: 5px;
}
.talk a:link, .talk a:visited {
  background-color: #0B486B;
  color: white;
  padding: 14px 25px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}

.talk a:hover, .talk a:active {
  background-color: #3B8686;
}

.talk{
	grid-row: 3/ span 1;
	grid-column: 1/ span 1;
	text-align: center;
	padding-top: 20px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 90%;
  border-radius: 5px;
}

.abstract h2{
	color: #3B8686;
	padding-bottom: 10px;
	font-size: 45px;
}
.video h2{
	padding-top: 20px;color: #3B8686;
	padding-bottom: 30px;
	font-size: 45px;
}

.talk h2{
	color: #3B8686;
	padding-bottom: 30px;
	font-size: 45px;
}
footer{
	grid-row: -1/ span 1;
	grid-column: 1/ -1;
}
#project-title {
  grid-column: 1 / -1;
  grid-row: 2 / span 1;

  color: white;
  text-align: center;
  /* Make h1 in the center */
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  align-items: center;
  line-height: 50px;

  /* Parallax effect */
  background-image: url("../images/team-trees.jpg");
  min-height: 300px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 30px;
}

#project-title h1 {
  font-size: 40pt;
}

#email {
  text-decoration: none;
  font-size: 17pt;
  color: white;
  font-weight: 100;
}

#email:hover, #email:focus {
  color: #CFF09E;
}
#project-title header a {
  font-size: 40pt;
  grid-row: 2;
}

.team-grid {
  grid-column: 2 / span 1;
  grid-row: 3 / span 1;

  display: grid;
  grid-row-gap: 30px;
  grid-template-rows: 425px 425px 425px 425px 445px 445px;
}

#mark-newman {
  grid-row: 1;
}

#rayoung-yang {
  grid-row: 2;
}

#gaurav-paruthi {
  grid-row: 3;
}

#tao-dong {
  grid-row: 4;
}

#yung-ju-chang {
  grid-row: 5;
}

#chuan-che-huang {
  grid-row: 6;
}

.people img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 220px;
  width: 100%;
  box-shadow: 0 4px 12px 0 rgba(0,0,0,0.2);
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.paragraph {
  text-align: center;
  color: #252525;
}
.paragraph h2, .paragraph p {
  padding-top: 20px;
  text-align: center;
}

.people {
  grid-column: 1 / -1;
  margin: 0 auto;
  box-shadow: 0 4px 12px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 70%;
  border-radius: 10px;
}
.people:hover, .people:focus {
  box-shadow: 0 8px 24px 0 rgba(0,0,0,0.2);
}
.people h3, p, a {
  padding-bottom: 10px;
  line-height: 1.2;
}
.people h2 a{
  font-size: 30px;
  font-family: 'Raleway', sans-serif;
}
.people h3 {
  font-size: 20px;
  color: #252525;
}
.people a {
  text-decoration: none;
  color: #3B8686;
}

.people a:hover, .people a:focus {
  color: #79BD9A;
}
.icons {
  padding-top: 24px;
}
.icons a {
  text-decoration: none;
  color: white;
  background-color: #0B486B;
  padding: 12px;
  border-radius: 10px;
}

.icons a:hover, .icons a:focus {
  background-color: #3B8686;
  color: white;
  box-shadow: 0 4px 7px 0 rgba(0,0,0,0.2);
}

.index_fraction{
  grid-column: 1/-1;
  grid-row: 3/auto;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: .75fr 1fr .25fr;
  grid-row-gap: 20px;
}
.card {
  text-align: center;
  display: block;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 2px 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 90%;
  border-radius: 5px;
}
.about{
  grid-column: 1/ -1;
  grid-row: 1 / auto;
  color: #0B486B;
  text-align: center;
  font-size: 20px;
}

.about h2{
  padding-top: 15px;
  padding-bottom: 5px;
  font-size: 20pt;
  color: #3B8686;
}

.about p{
  font-size: 17px;
  padding-left: 5px;
  padding-right: 5px;
  padding-bottom: 15px;
}

.us {
  grid-column: 1/ -1;
  grid-row: 2 / auto;
  color: #0B486B;
  text-align: center;
  font-size: 20px;
}

.us h3{
  padding-top: 15px;
  padding-bottom: 5px;
  font-size: 20pt;
  color: #3B8686;
}

.us p{
  font-size: 17px;
  padding-left: 5px;
  padding-right: 5px;
  padding-bottom: 15px;
}

.affiliation {
  grid-column: 1/ -1;
  grid-row: 3 / auto;
  color: #0B486B;
  text-align: center;
  font-size: 20px;
}

.affiliation h4{
  padding-top: 15px;
  padding-bottom: 5px;
  font-size: 20pt;
  color: #3B8686;
}

.affiliation p{
  font-size: 17px;
  padding-left: 5px;
  padding-right: 5px;
  padding-bottom: 15px;
}
footer {
  color: #3B8686;
}
/* ... */

